# remembite

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  run-api.sh  run-app.sh  vector.toml
.githooks/: pre-push
app/: README.md  pubspec.yaml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/k6/: 01_reactions.js  02_search.js  03_restaurant_screen.js  README.md
backend/migrations/: 0001_initial_schema.sql  0002_user_purchase_token.sql  0003_reports.sql  0004_dish_attribute_confidence.sql  0005_image_entity_type.sql  0006_restaurant_enrichment.sql  0007_dish_intents.sql  0008_bootstrap.sql
backend/src/: config.rs  error.rs  main.rs  test_helpers.rs
backend/src/auth/: google.rs  jwt.rs  jwt_tests.rs  middleware.rs  mod.rs
backend/src/dto/: mod.rs
backend/src/jobs/: mod.rs  queue.rs  worker.rs  worker_tests.rs
backend/src/llm/: gemini.rs  mock.rs  mod.rs  provider.rs
backend/src/middleware/: rate_limit.rs
backend/src/middleware/rate_limit/: mod.rs  rate_limit_tests.rs
backend/src/models/: dish.rs  mod.rs  restaurant.rs  user.rs
backend/src/routes/: access_control_tests.rs  auth.rs  dish_tests.rs  dishes.rs  edit_suggestions.rs  export.rs  health.rs  images.rs  mod.rs  ocr.rs  payments.rs  ratings.rs  reports.rs  restaurants.rs  search.rs  search_tests.rs  sync.rs  timeline.rs  webhooks.rs
backend/src/services/: google_play.rs  mod.rs
design/: remembite.pen
docs/: Deployment.md  Dev Prompts.md  Feature Gates.md  Financial Projections.md  Investor Deck.md  PRD.md  RoadMap.md  (+4 more)
(+100 files in other folders)
